<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">健康养生</string>

    <string name="tab_home">主页</string>
    <string name="tab_post">论坛</string>
    <string name="tab_constitution">体质</string>
    <string name="tab_attention">关注</string>
    <string name="tab_myself">我的</string>

    <string name="tips_attention_title">我的关注</string>
    <string name="tips_constitution_title">体质中心</string>

    <string name="tips_search">搜索</string>
    <string name="hint_search">搜索你感兴趣的:</string>
    <string name="tips_myself_login">登录账号享受更多优质体验</string>
    <string name="tips_myself_message">我的消息</string>
    <string name="tips_myself_test">体质测试</string>
    <string name="tips_myself_attention">我的关注</string>
    <string name="tips_myself_post">我的帖子</string>
    <string name="tips_myself_info">个人信息</string>

    <string name="template_skip">跳过 ( %d )</string>

    <string name="tips_myself_setting">设置</string>

    <string name="action_focused">关注</string>
    <string name="action_not_focused">取消关注</string>

    <string name="tips_user_info">个人信息</string>
    <string name="tips_user_profile">头像</string>
    <string name="tips_user_nickname">昵称</string>
    <string name="tips_user_gender">性别</string>
    <string name="tips_user_birthday">生日</string>
    <string name="tips_user_address">所在地</string>
    <string name="tips_user_signature">个人简介</string>
    <string name="tips_edit_signature">编辑个人简介</string>
    <string name="tips_user_male">男</string>
    <string name="tips_user_female">女</string>
    <string name="tips_edit_address">编辑个人地址</string>
    <string name="tips_secret">保密</string>
    <string name="tips_load_all_data">健康养生：已加载全部数据</string>

    <string name="news_comment_num_template"><xliff:g id="IMAGE_NUM">%d</xliff:g>评</string>

    <string name="tips_login_title">账号密码登录</string>
    <string name="tips_new_user_register">新用户注册</string>
    <string name="tips_login_username">账号</string>
    <string name="tips_login_password">密码</string>

    <string name="tips_login_forget">忘记密码</string>
    <string name="tips_register_title">新用户注册</string>
    <string name="tips_register_subtitle_message">注册账号体验专业养生社区</string>

    <string name="action_register_send_code">发送验证码</string>
    <string name="action_login_with_space">&#032;登&#032;&#032;录&#032;</string>
    <string name="action_register_with_space">&#032;注&#032;&#032;册&#032;</string>
    <string name="action_update_password_with_space">&#032;确&#032;认&#032;修&#032;改&#032;</string>


    <string name="hint_please_input_username">请输入账号</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_repassword">请输入确认密码</string>
    <string name="hint_please_input_nickname">请输入用户昵称</string>
    <string name="hint_please_input_phone">请输入手机号码</string>
    <string name="hint_please_input_code">请输入验证码</string>


    <string name="tips_verify_phone_subtitle">验证手机号</string>
    <string name="tips_total_like_count_template">%d 人觉得很赞</string>
    <string name="tips_total_views_template">游览 %d 次</string>
    <string name="tips_total_attention_template">关注：%d</string>


    <string name="action_more">查看更多</string>

    <string name="comment_has_reply_object"><Data><![CDATA[<font color="#1C4C7A">%1$s</font> 回复 <font color="#1C4C7A">%2$s：</font> %3$s]]></Data></string>
    <string name="comment_has_no_reply_object"><Data><![CDATA[<font color="#1C4C7A">%1$s：</font> %2$s]]></Data></string>
    <string name="tips_login_success">健康养生：登录成功</string>
    <string name="tips_logging_in">正在登录…</string>
    <string name="tips_updating">正在更新…</string>
    <string name="tips_update_password_title">修改密码</string>


    <string name="action_edit_user_info">编辑信息</string>
    <string name="tips_empty_post_list">还没有发过帖子，去发个试试！</string>
    <string name="tips_empty_news_list">该频道暂无新闻，看看其他频道吧~</string>
    <string name="tips_lack_of_important_params">缺少重要参数</string>
    <string name="action_logout">注销</string>
    <string name="tips_empty_attention_list">列表空空如也</string>

    <string name="tips_over_maximum">%s</string>

    <string name="tips_over_maximum_articles">%s 文章</string>

    <string name="a_hundred_million">%d亿</string>
    <string name="ten_million">%d千万</string>
    <string name="ten_thousand">%d万</string>
    <string name="tips_update_save">保存</string>
    <string name="tips_news_content_original">原创</string>
    <string name="hint_write_comment">写评论</string>
    <string name="tips_put_first_comment">快来抢沙发</string>

    <string name="hint_comment">有趣有品的评论将更容易被看到</string>
    <string name="hint_comment_template">回复&#032;<xliff:g id="REPLY_SIZE">%s</xliff:g>:</string>
    <string name="tips_comment_failed">评论失败</string>
    <string name="tips_comment_success">评论成功</string>

    <string name="tips_news_author">
        <Data><![CDATA[<b>%1s</b>]]></Data>
    </string>
    <string name="tips_publish_comment">发表</string>
    <string name="tips_content_not_null">评论内容不能为空</string>
    <string name="tips_post_content_not_null">发布帖子标题和内容不能为空</string>
    <string name="tips_all_discussions_title">全部评论</string>
    <string name="tips_like_success">点赞成功</string>
    <string name="tips_cancel_like_success">取消赞成功</string>
    <string name="tips_focus_on_success">关注成功</string>
    <string name="tips_cancel_focus_on_success">取消关注成功</string>
    <string name="tips_happen_unknown_error">发生未知错误</string>
    <string name="tips_connect_server">正在查询</string>

    <string name="tips_setting_update">检查更新</string>
    <string name="tips_setting_about">关于</string>
    <string name="tips_setting_clear">清理缓存</string>
    <string name="tips_setting_user">我的帐户</string>
    <string name="tips_setting_login">登录</string>
    <string name="tips_setting_text_size_middle">中</string>
    <string name="tips_setting_text_size">字体大小</string>
    <string name="tips_setting_logout">注销</string>
    <string name="tips_dialog_title">提示信息</string>
    <string name="tips_want_to_clear_cache">是否需要清除缓存？</string>
    <string name="tips_logout_subtitle">退出登录</string>
    <string name="tips_logout_message">你确定想从这个账号退出吗？</string>
    <string name="tips_logout_ing">正在注销...</string>
    <string name="tips_logout_success">注销成功</string>
    <string name="tips_update_info_title">更新信息</string>

    <string name="tips_user_info_title">用户信息</string>
    <string name="tips_modify_gender_title">更改性别</string>
    <string name="tips_modify_nickanme_title">更改昵称</string>
    <string name="tips_modify_signature_title">更改签名</string>
    <string name="hint_edit_nickname">编辑个人昵称</string>
    <string name="tips_update_nickname_error">输入昵称长度应满足2-10个字符</string>
    <string name="tips_update_signature_error">输入签名长度应满足0-120个字符</string>
    <string name="tips_upload_ing">正在上传</string>
    <string name="tips_upload_success">上传成功</string>
    <string name="tips_publish_success">发表成功</string>
    <string name="tips_clear_search_history">清除搜索记录</string>
    <string name="tips_please_input_keywords">请输入检索内容</string>
    <string name="tips_keywords_not_empty">输入检索关键字不能为空值</string>
    <string name="tips_empty_search_history">暂无搜索记录</string>
    <string name="tips_empty_search_result">未搜索到相关结果</string>
    <string name="hint_post_whatever_you_want_to_share">分享你的养生经验...</string>
    <string name="tips_camera_or_gallery">相机/相册</string>
    <string name="tips_create_post">发布帖子</string>
    <string name="tips_over_post_maximum">帖子内容文字数量超过最大值</string>
    <string name="tips_choose_method">上传图片方式</string>
    <string name="tips_invitation_detail_title">帖子详情</string>
    <string name="tips_empty_question_list">未找到相关试题</string>
    <string name="never">没有</string>
    <string name="less">很少</string>
    <string name="sometimes">有时</string>
    <string name="usually">经常</string>
    <string name="always">总是</string>
    <string name="tips_constitution_test_title">体质测试</string>
    <string name="action_commit">提交</string>
    <string name="tips_signup_ing">正在注册...</string>
    <string name="tips_signup_success">注册成功</string>
    <string name="tips_send_success">发送验证码成功</string>
    <string name="tips_verify_phone_success">验证成功</string>
    <string name="tips_have_not_finish">请作答第 %d 题</string>
    <string name="tips_whats_constitution">什么是 %s ?</string>
    <string name="tips_keep_fit_method">想改善，怎么办 ?</string>
    <string name="tips_test_result">测试结果</string>
    <string name="tips_test_result_error">测试报告出现异常现象</string>
    <string name="tips_share">分享</string>
    <string name="tips_make_a_title">给帖子定个小标题</string>
    <string name="tips_post_title">帖子标题</string>
    <string name="tips_post_content">帖子内容</string>
    <string name="tips_coming_soon">正在开发...</string>
    <string name="action_repeat_test">重新测试</string>
    <string name="tips_healthy_level">健康等级：</string>
    <string name="tips_update_success">修改成功</string>
    <string name="tips_donot_commit_this_time">当前状态不能进行提交</string>

    <string-array name="user_center_tab_titles">
        <item>文章</item>
        <item>动态</item>
    </string-array>

    <string-array name="user_update_titles">
        <item>@string/tips_user_nickname</item>
        <item>@string/tips_user_gender</item>
        <item>@string/tips_user_signature</item>
    </string-array>

</resources>
