<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white">

    <TextView
        android:id="@+id/register_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/tips_register_title"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/tips_register_subtitle_message"
        android:textSize="@dimen/sp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title_tv"
        tools:layout_editor_absoluteY="90dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_phone_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle_tv">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_phone_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_please_input_phone"
            android:imeOptions="actionNext"
            android:inputType="textPhonetic"
            android:maxLength="16"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/sp_16">

            <requestFocus />
        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_30"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_til"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_please_input_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/md_black"
            android:textSize="@dimen/sp_16">

        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_repassword_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_30"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_til"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_repassword_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_please_input_repassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/md_black"
            android:textSize="@dimen/sp_16">

        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_nickname_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_30"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_repassword_til">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/register_nickname_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_edit_nickname"
            android:maxLength="16"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/sp_16">

        </android.support.v7.widget.AppCompatEditText>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@drawable/selector_login_btn"
        android:text="@string/action_register_with_space"
        android:textColor="@color/md_white"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>