<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/update_password_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/tips_update_password_title"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/update_password_til"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_30"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_password_title_tv"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/update_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_please_input_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/md_black"
            android:textSize="@dimen/sp_16">

            <requestFocus/>
        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/update_repassword_til"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_30"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_password_til"
        app:passwordToggleEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/update_repassword_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/hint_please_input_repassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/md_black"
            android:textSize="@dimen/sp_16">

        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/update_password_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/selector_login_btn"
        android:text="@string/action_update_password_with_space"
        android:textColor="@color/md_white"
        app:layout_constraintTop_toBottomOf="@id/update_repassword_til" />


</android.support.constraint.ConstraintLayout>