<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_white">

    <TextView
        android:id="@+id/input_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/tips_verify_phone_subtitle"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/input_phone_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@id/input_title_tv">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_phone_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/hintError">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_phone_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/hint_please_input_phone"
                android:imeOptions="actionNext"
                android:inputType="textPhonetic"
                android:maxLength="16"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/sp_16">

                <requestFocus />
            </android.support.v7.widget.AppCompatEditText>

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/register_clear_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/dp_24"
            android:maxHeight="@dimen/dp_24"
            android:src="@drawable/selector_username_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_phone_til"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/register_code_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_code_til"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_10"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/register_send_btn"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/register_code_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/hint_please_input_code"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/sp_16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_send_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/selector_send_code_btn"
            android:enabled="false"
            android:text="@string/action_register_send_code"
            android:textColor="@color/selector_send_code_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/register_code_til"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>